--- a/MultiThreading/MultiThreading.vcxproj
+++ b/MultiThreading/MultiThreading.vcxproj
@@ -116,11 +116,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="LinkedList.cpp" />
+    <ClCompile Include="Mutex.cpp" />
+    <ClCompile Include="RandomSequence.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Serial.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LinkedList.h" />
+    <ClInclude Include="Mutex.h" />
     <ClInclude Include="RandomSequence.h" />
+    <ClInclude Include="Serial.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
